# edgeware-node

./: Cargo.toml
modules/edge-delegation/: Cargo.toml
modules/edge-delegation/src/: delegation.rs
modules/edge-governance/: Cargo.toml
modules/edge-governance/src/: governance.rs
modules/edge-identity/: Cargo.toml
modules/edge-identity/src/: identity.rs  lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/wasm/: Cargo.toml
