[package]
name = "edgeware-runtime"
version = "0.1.2"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]

[dependencies]
safe-mix = { version = "1.0", default-features = false }
parity-codec = "2.0"
parity-codec-derive = "2.0"
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true, default-features = false }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-consensus = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-aura = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-executive = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-session = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-contract = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-treasury = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-staking = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-democracy = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-council = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-client = { git = "https://github.com/paritytech/substrate", optional = true, default-features = false }
sr-version = { git = "https://github.com/paritytech/substrate" }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate" }
rustc-hex = { version = "1.0", optional = true }
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true }

node-primitives = { path = "../primitives", default-features = false }
edge-delegation = { path = "../modules/edge-delegation" }
edge-governance = { path = "../modules/edge-governance" }
edge-identity = { path = "../modules/edge-identity" }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-std/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-contract/std",
	"srml-council/std",
	"srml-democracy/std",
	"srml-executive/std",
	"srml-grandpa/std",
	"sr-primitives/std",
	"srml-session/std",
	"srml-staking/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-treasury/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"node-primitives/std",
	"serde/std",
	"safe-mix/std",
	"substrate-client/std",
	"substrate-consensus-aura-primitives/std",
	"rustc-hex",
	"hex-literal",
	"serde",
	"substrate-keyring",

	"edge-delegation/std",
	"edge-governance/std",
	"edge-identity/std",
	"node-primitives/std",
]
