[package]
name = "edge-delegation"
version = "0.1.3"
authors = ["Drew Stone <drew@commonwealth.im>"]

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "2.1", default-features = false }
parity-codec-derive = { version = "2.1", default-features = false }
substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true, branch = "v0.9" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "safe-mix/std",
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "sr-primitives/std",
    "srml-system/std",
    "srml-balances/std",
]
