[package]
name = "edgeware-runtime"
version = "0.1.2"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rustc-hex = { version = "1.0", optional = true }
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = "2.0"
parity-codec-derive = "2.0"
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
substrate-keyring = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "v0.9" }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-consensus = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-contract = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-council = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "v0.9" }
substrate-client = { git = "https://github.com/paritytech/substrate", optional = true, default-features = false, branch = "v0.9" }
sr-version = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }

node-primitives = { path = "../../primitives", default-features = false }
edge-delegation = { path = "../../modules/edge-delegation" }
edge-governance = { path = "../../modules/edge-governance" }
edge-identity = { path = "../../modules/edge-identity" }

[features]
default = []
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-std/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-contract/std",
	"srml-council/std",
	"srml-democracy/std",
	"srml-executive/std",
	"srml-grandpa/std",
	"sr-primitives/std",
	"srml-session/std",
	"srml-staking/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-treasury/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"serde/std",
	"safe-mix/std",
	"substrate-client/std",
	"substrate-consensus-aura-primitives/std",
	"rustc-hex",
	"hex-literal",
	"serde",
	"substrate-keyring",
	"edge-delegation/std",
	"edge-governance/std",
	"edge-identity/std",
	"node-primitives/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
